--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="row">
             <div class="col-4">
                 <div class="wrapper mt-4">
-                    <input type="text">
-                    <button type="button" class="btn btn-info">Search</button>
+                    <input type="text" class="search-input" placeholder="City Name">
+                    <button type="button" class="btn btn-info search">Search</button>
                 </div>
                 <div class="append-city"></div>
 
@@ -26,41 +26,29 @@
             <div class="col-8">
 
                 <div class="row">
-                    <h1>City Name and Date Here</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quos doloribus sed nihil
-                        consequuntur voluptate magni nulla at reprehenderit, officia sunt, neque doloremque maxime in
-                        natus porro commodi magnam. Non quisquam nesciunt rem vitae amet earum eum soluta culpa harum!
-                        Sapiente perferendis cumque molestiae, soluta dicta dolore maxime, dolorem, amet obcaecati
-                        cupiditate odio debitis aut cum. Similique eligendi vitae cumque facilis, corporis, veritatis
-                        facere non voluptatum nobis, nisi vero error reiciendis sint quas obcaecati dolorum nesciunt
-                        optio. Nulla voluptate veniam deleniti eum qui beatae provident fuga reprehenderit magnam.
-                        Expedita quia itaque, sed officia, dolor animi aperiam et numquam a temporibus nihil ratione
-                        officiis tempore commodi. Possimus, iste optio aperiam libero neque repellendus quibusdam
-                        dolores in ex dolore ratione, facilis a! Aut saepe, exercitationem, voluptates corrupti sapiente
-                        dolorem molestias minus asperiores qui cumque quibusdam, quia nihil autem incidunt deserunt.
-                        Suscipit laboriosam quod voluptates magnam, consectetur aspernatur. Atque libero tenetur
-                        corporis officia alias quisquam, vero ipsa ea saepe minus odio voluptatem omnis dolorum
-                        laboriosam nisi delectus facilis rerum non incidunt. Eaque odio maiores odit quidem natus
-                        exercitationem incidunt eius culpa error reiciendis beatae architecto vero excepturi quaerat,
-                        cum obcaecati minima non ut consectetur temporibus delectus facere tempora fugiat sapiente.
-                        Molestias fugiat impedit corporis laudantium aspernatur cumque a, animi architecto at explicabo,
-                        quasi vitae nihil itaque dolorum deleniti excepturi accusamus, perferendis aut quaerat eaque
-                        veniam? Blanditiis repellendus ea cumque dolorum, qui nisi deserunt sunt consequatur eius velit
-                        voluptates tempora obcaecati corporis fugit iure inventore necessitatibus dolores asperiores ex
-                        ipsum numquam voluptas? Iste quas necessitatibus debitis voluptas, fugit architecto cumque
-                        aperiam alias labore! Delectus commodi perspiciatis, nobis odio optio repellat, minus possimus
-                        libero, ex blanditiis explicabo! Aliquid debitis ad a nobis veritatis voluptatibus repudiandae
-                        laudantium, aut molestiae optio magnam possimus placeat alias quae nihil eaque quo ex cumque.
-                        Natus dolorum vel, reiciendis consectetur accusamus harum voluptate, quia explicabo, distinctio
-                        ipsa officiis expedita odit ducimus? Hic aperiam nihil deleniti unde facere enim debitis
-                        distinctio quibusdam odit eius! Ratione dolor quis iusto recusandae aliquam quos. Architecto ad
-                        ex incidunt nemo deleniti! Unde aut voluptatum beatae, placeat dignissimos porro aperiam et
-                        rerum aliquam asperiores voluptatem omnis, distinctio, eligendi molestiae nesciunt ipsam sunt.
-                        Ex autem nostrum, quis, natus a eos commodi non possimus, quisquam itaque ipsum libero dolor
-                        culpa. Suscipit et quia nihil, harum ea fugit beatae minima cum labore est quidem aut rem
-                        laborum dolor saepe. Quaerat eum similique fugiat ullam amet, recusandae sed ipsa inventore
-                        consequuntur voluptate? Perspiciatis, quasi voluptate excepturi tenetur maxime, ea iure enim
-                        harum exercitationem eum quis?</p>
+                    <h1 id="city-name"></h1>
+                </div>
+                <div class="row">
+                    <h2 id="temperature"></h2>
+                    <br>
+
+                </div>
+                <div class="row">
+                    <h2 id="humidity"></h2>
+                    <br>
+
+                </div>
+                <div class="row">
+                    <h2 id="wind-speed"></h2>
+                    <br>
+
+                </div>
+                <div class="row">
+                    <h2 id="uv-index"></h2>
+                    <button type="button" class="btn uv-severity"></button>
+                </div>
+                <div class="row">
+                    <hr>
                 </div>
                 <div class="row">
                     <h1>5-Day Forecast:</h1>
@@ -137,6 +125,123 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script>
+        var apiKey = "fb36f051233cb31b414e197acbf4328b";
+        var placeInput = "San Diego";
+        var place = "San Diego";
+        var buttonsReturned = [];
+        var buttons = [];
+        var i = 0;
+        console.log(buttons);
+
+        $(".append-city").append("<button class='history'>" + place + "</button> <br>")
+
+
+
+        function appendCityButton() {
+
+            placeInput = $(".search-input").val().trim();
+            if (placeInput != "") {
+                place = placeInput;
+                if (buttons.includes(place)) {
+                    return;
+                } else {
+                    $(".append-city").append("<button>" + place + "</button> <br>")
+                    buttons.push(place);
+                    localStorage.setItem("cities", JSON.stringify(buttons));
+                }
+            } else {
+                return;
+            }
+        }
+
+
+        function setCityInfo() {
+
+
+            $.ajax({
+                url: "https://api.openweathermap.org/data/2.5/weather?q=" + place + "&appid=" + apiKey,
+                method: "GET"
+            }).then(function (response) {
+                //display name of city and date in header
+                $("#city-name").text(response.name);
+                //display current temp for city
+                $("#temperature").text("Temperature: " + ((response.main.temp - 273.15) * 9 / 5 + 32).toFixed(1) + "°F");
+                //display current Humidity for city
+                $("#humidity").text("Humidity: " + response.main.humidity + "%");
+                //display current Wind Speed for city
+                $("#wind-speed").text("Wind Speed: " + response.wind.speed + "MPH");
+                var longitude = response.coord.lon;
+                var latitude = response.coord.lat;
+                console.log(latitude)
+
+                $.ajax({
+                    url: "https://api.openweathermap.org/data/2.5/uvi?appid=" + apiKey + "&lat=" + latitude + "&lon=" + longitude,
+                    method: "GET"
+                }).then(function (response) {
+                    console.log(response)
+                    //display current UV Index for city
+                    $("#uv-index").text("UV Index: " + response.value);
+                    if (response.value <= 2) {
+                        $(".uv-severity").attr("style", "background-color: green")
+                    } else if (response.value <= 5) {
+                        $(".uv-severity").attr("style", "background-color: yellow")
+                    } else if (response.value <= 7) {
+                        $(".uv-severity").attr("style", "background-color: orange")
+                    } else if (response.value <= 10) {
+                        $(".uv-severity").attr("style", "background-color: red")
+                    } else {
+                        $(".uv-severity").attr("style", "background-color: purple")
+                    }
+                })
+            });
+        }
+        if (localStorage.getItem("cities") !== null) {
+            buttonsReturned = localStorage.getItem("cities");
+            buttons = JSON.parse(buttonsReturned);
+            console.log(buttons);
+            while (i < buttons.length) {
+                $(".append-city").append("<button class='history'>" + buttons[i] + "</button> <br>")
+                i++
+            }
+        }
+
+        setCityInfo();
+
+        // setFiveDay();
+
+        //checks if local storage has any data to return
+
+
+        //on click grab user input for city
+        $(".search").on("click", function () {
+
+            //append new button below search with user input as name and save to local storage
+            appendCityButton();
+            //enter user input to variables for ajax requests to get page data
+            setCityInfo();
+
+            // setFiveDay();
+        });
+
+
+        $(".history").on("click", function () {
+
+            placeInput = $(this).text();
+            //if you click on a button in history
+
+
+            appendCityButton();
+
+            setCityInfo();
+
+        });
+
+
+
+    </script>
 </body>
 
 </html>
