--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="moment.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script>
         var apiKey = "fb36f051233cb31b414e197acbf4328b";
         var placeInput = "San Diego";
@@ -115,7 +115,6 @@
         var buttonsReturned = [];
         var buttons = [];
         var i = 0;
-        var j = 0;
 
 
         $(".append-city").append("<button class='history'>" + place + "</button> <br>")
@@ -149,7 +148,7 @@
                 method: "GET"
             }).then(function (response) {
                 //display name of city and date in header
-                $("#city-name").text(response.name);
+                $("#city-name").text(response.name +" "+ moment().month() + "/" + moment().date() + "/" + moment().year());
                 //display current temp for city
                 $("#temperature").text("Temperature: " + ((response.main.temp - 273.15) * 9 / 5 + 32).toFixed(1) + "°F");
                 //display current Humidity for city
@@ -183,6 +182,11 @@
         }
 
         function setFiveDay() {
+
+            var j = 0;
+
+            $(".card-body").empty();
+
             $.ajax({
                 url: "https://api.openweathermap.org/data/2.5/forecast?q=" + place + "&appid=" + apiKey,
                 method: "GET"
@@ -192,9 +196,11 @@
                     //look through response array
                     console.log(response.list[j])
                     // add info the the children of cards with matching data value
+                    $(".card-body[data-value=" + j + "]").append("<h6>"+moment().month() + "/" + moment().add(1+j, "d").date() + "/" + moment().year()+"</h6>")
+                    $(".card-body[data-value=" + j + "]").append("<img src='http://openweathermap.org/img/wn/"+ response.list[j].weather[0].icon +"@2x.png'>")
                     $(".card-body[data-value=" + j + "]").append("<h6>Temp: " + ((response.list[j].main.temp - 273.15) * 9 / 5 + 32).toFixed(1) + "°F</h6>");
                     $(".card-body[data-value=" + j + "]").append("<h6>Humidity: " + response.list[j].main.humidity + "%</h6>");
-                    console.log(moment(response.list[j].dt));
+                    console.log(moment().date());
 
                     j++;
                 }
@@ -234,7 +240,7 @@
             //enter user input to variables for ajax requests to get page data
             setCityInfo();
 
-            // setFiveDay();
+            setFiveDay();
         });
 
 
@@ -247,6 +253,8 @@
             appendCityButton();
 
             setCityInfo();
+
+            setFiveDay();
 
         });
 
