centered header text

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 </head>
 
 <body>
-    <div class="container-fluid-nav text-center">
-        <nav class="navbar navbar-dark bg-dark ">
-            <h1 style="color: white;">Weather Dashboard</h1>
+        <nav class="navbar navbar-dark bg-dark navbar-center">
+            <h1 style="color: white; margin: 0 auto;">Weather Dashboard</h1>
         </nav>
-    </div>
+
 
     <div class="container">
 
